# DeskClaw

./: .gitignore  README.md  README.zh-CN.md  pubspec.yaml
.github/workflows/: build.yml
installers/: download_runtimes.ps1  download_runtimes.sh
installers/linux/: build_appimage.sh  coraldesk.desktop
installers/windows/: setup.iss
integration_test/: simple_test.dart
lib/: constants.dart  main.dart
lib/bootstrap/: app_bootstrapper.dart
lib/controllers/: chat_controller.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/models/: agent_role.dart  agent_workspace.dart  chat_message.dart  chat_session.dart  models.dart
lib/providers/: agent_workspace_provider.dart  chat_provider.dart  cron_notification_provider.dart  providers.dart
lib/services/: agent_service.dart  mcp_test_client.dart  services.dart  session_persistence_service.dart  settings_service.dart  tray_service.dart  update_service.dart
lib/src/rust/: frb_generated.dart  (+2 more)
lib/theme/: app_theme.dart
lib/views/: placeholder_page.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: bundled_runtimes.rs  frb_generated.rs  lib.rs  logging.rs
rust/src/api/: agent_api.rs  agent_workspace_api.rs  agents_api.rs  browser_bootstrap.rs  config_api.rs  cron_api.rs  cron_notification_api.rs  knowledge_api.rs  mcp_api.rs  mod.rs  proxy_api.rs  routes_api.rs  sessions_api.rs  simple.rs  skills_api.rs  workspace_api.rs
rust/src/api/preset_souls/: architect.md  coder.md  context_keeper.md  critic.md  integrator.md  validator.md
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_deskclaw.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_deskclaw.podspec
rust_builder/windows/: CMakeLists.txt
test/models/: models_test.dart
test/providers/: messages_notifier_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+42 files in other folders)
