[package]
name = "rust_lib_deskclaw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
zeroclaw = { path = "../zeroclaw", default-features = false }
tokio = { version = "1.42", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
