[package]
name = "rust_lib_deskclaw"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
zeroclaw = { path = "../zeroclaw", default-features = false }
tokio = { version = "1.42", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dirs = "5"
rusqlite = { version = "0.37", features = ["bundled"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Override zeroclaw's server-oriented release profile with desktop-optimized settings.
# zeroclaw uses opt-level="z" + codegen-units=1 (sized for embedded/IoT);
# for a desktop app we prefer faster execution over minimal binary size.
[profile.release]
opt-level = 2     # Balanced performance (not "z" which sacrifices speed for size)
lto = "thin"      # Faster link times than "fat", still good cross-crate optimization
codegen-units = 8 # Parallel codegen — faster builds on machines with ample RAM
strip = true      # Remove debug symbols
panic = "abort"   # Smaller binary, no unwinding overhead

[profile.dev]
opt-level = 0
debug = 1     # Reduced debug info for faster dev builds
